--- a/index.html
+++ b/index.html
@@ -106,25 +106,31 @@
                 <div class="heading">
                     <p>PROJECTS</p>
                 </div>
-                <div class="project_items">
-
-                    <div class="carousel">
-                        <div class="carousel-item">
-                            <div class="slide-image" style="background-image:  
-            url('assets/cafe.jpg');">
+                <div class="project_container">
+                    <a href="cafe/cafe.html" target="_blank">
+                        <div class="project_item">
+                            <img src="assets/cafe.jpg" alt="Web Frontend">
+                            <div class="project_title">
+                                <p>Cafe Website</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="slide-image" style="background-image:  
-            url('assets/networking.jpg');">
+                    </a>
+                    <a href="modern website/modern website/index.html" target="_blank">
+                        <div class="project_item">
+                            <img src="assets/networking.jpg" alt="Web Frontend">
+                            <div class="project_title">
+                                <p>Modern Website</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="slide-image" style="background-image:  
-            url('assets/travel.jpg');">
+                    </a>
+                    <a href="travel website/travel.html" target="_blank">
+                        <div class="project_item">
+                            <img src="assets/travel.jpg" alt="Web Frontend">
+                            <div class="project_title">
+                                <p>Travel Agency</p>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -132,7 +138,7 @@
     </div>
 
     <script src="index.js"></script>
-    
+
 </body>
 
 </html>
