Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#aboutme">ABOUT</a></li>
                     <li><a href="#skills">SKILLS</a></li>
                     <li><a href="#projects">PROJECTS</a></li>
-                    <li><a href="#experience">EXPERIENCE</a></li>
+                    <!-- <li><a href="#experience">EXPERIENCE</a></li> -->
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </nav>
@@ -134,7 +134,57 @@
                 </div>
             </div>
         </div>
-        <div style="margin-bottom: 20vh;" class="footer"></div>
+
+        <!-- Footer -->
+        <div id="footer" class="footer">
+            <div class="footer2">
+                <div class="heading footer_heading">
+                    <p>PROJECTS</p>
+                </div>
+                <div class="content">
+                    <div class="services">
+                        <h4 style="text-decoration: underline;">Services</h4>
+                        <p>App development</p>
+                        <p>Web development</p>
+                        <p>DevOps</p>
+                    </div>
+                    <div class="social-media">
+                        <h4 style="text-decoration: underline;">Social</h4>
+                        <p>
+                            <a href="https://www.linkedin.com/in/gopal-vishwakarma-95ab9325a/" target="_blank"><i
+                                    class="fab fa-linkedin"></i> Linkedin</a>
+                        </p>
+                        <p>
+                            <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fgopalvish1510"
+                                target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+                        </p>
+                        <p>
+                            <a href="https://www.linkedin.com/in/gopal-vishwakarma-95ab9325a/" target="_blank"><i
+                                    class="fab fa-github"></i> Github</a>
+                        </p>
+                        <p>
+                            <a href="https://www.facebook.com/profile.php?id=100065195851292" target="_blank"><i
+                                    class="fab fa-facebook"></i>
+                                Facebook</a>
+                        </p>
+                        <p>
+                            <a href="https://www.instagram.com/gopal_vishwakarma15?igsh=MWtkOWc1amUwc3hmbw=="
+                                target="_blank"><i class="fab fa-instagram"></i>
+                                Instagram</a>
+                        </p>
+                    </div>
+                    <div class="links">
+                        <h4 style="text-decoration: underline;">Quick links</h4>
+                        <p><a href="#about">About</a></p>
+                        <p><a href="#skills">Skiils</a></p>
+                    </div>
+                    <div class="details">
+                        <h4 class="address" style="text-decoration: underline;">Contact</h4>
+                        <p><a href="#">vishwakarmagopalcs222343@gmail.com</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="index.js"></script>
